# muxer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish.yml
benches/: coverage.rs  monitor.rs  router_select.rs
docs/: DOC_STATUS.md  QUICKSTART.md  README.md
docs/design/: api-1.0-checklist.md  config-api-hardening.md  muxer-tower.md  ope-primitives.md  post-round-3-roadmap.md
examples/: EXPERIMENTS.md  README.md  ad_auction_harness.rs  bqcd_calibrated.rs  bqcd_sampling.rs  contextual_propensity_logging.rs  contextual_router.rs  coverage_autotune.rs  decision_unified.rs  detector_calibration.rs  detector_inertia.rs  deterministic_router.rs  end_to_end_router.rs  exp3ix_router.rs  feedback_regime_matrix.rs  fraud_scoring_harness.rs  free_lunch_investigation.rs  getting_started.rs  guardrail_semantics.rs  llm_gateway_harness.rs  mab_constraints_tuning.rs  matrix_harness.rs  medical_triage_harness.rs  monitored_router.rs  off_policy_evaluation.rs  pareto_bandit.rs  pcap_triage_harness.rs  router_production.rs  router_quickstart.rs  search_ranking_harness.rs  significant_shift_sim.rs  sticky_mab_router.rs  synthetic_drift_harness.rs  thompson_router.rs  uci_mushroom_router.rs  validation_trace_matrix.rs  window_delayed_junk_label.rs
examples/bqcd_world/: mod.rs
examples/common/: mod.rs
scripts/: build_feedback_traces.py  build_validation_traces.py  feedback_sources.toml  fetch_feedback_datasets.py  fetch_validation_datasets.sh
src/: alloc.rs  assessment.rs  boltzmann.rs  contextual.rs  control.rs  coverage.rs  decision.rs  exp3ix.rs  guardrail.rs  harness.rs  lib.rs  monitor.rs  novelty.rs  ope.rs  policy.rs  prior.rs  router.rs  stable_hash.rs  sticky.rs  thompson.rs  triage.rs  utils.rs  worst_first.rs
tests/: assessment.rs  calibration.rs  e2e_metrics.rs  frontier_constraint_props.rs  monitored_props.rs  objective_manifold.rs  outcome_invariants.proptest-regressions  outcome_invariants.rs  router_props.rs  scenarios.rs
