[package]
name = "muxer"
version = "0.3.5"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = true
description = "Deterministic, multi-objective bandit-style routing primitives (windowed stats + Pareto selection)."
repository = "https://github.com/arclabs561/muxer"
homepage = "https://github.com/arclabs561/muxer"
documentation = "https://docs.rs/muxer"

[package.metadata.docs.rs]
features = ["serde", "contextual"]

[dependencies]
logp = "0.1.0"
pare = "0.1.2"
rand = { version = "0.9", optional = true }
rand_distr = { version = "0.5", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.7"
proptest = "1.9"

[features]
default = ["stochastic"]
serde = ["dep:serde"]
stochastic = ["dep:rand", "dep:rand_distr"]
contextual = ["dep:rand"]

[[bench]]
name = "coverage"
harness = false

[[bench]]
name = "monitor"
harness = false

