[package]
name = "muxer"
version = "0.5.3"
edition = "2021"
rust-version = "1.66"
license = "MIT OR Apache-2.0"
publish = true
description = "Multi-objective bandit routing with drift detection"
repository = "https://github.com/arclabs561/muxer"
keywords = ["bandit", "routing", "llm", "pareto", "multi-objective"]
categories = ["algorithms", "science"]
homepage = "https://github.com/arclabs561/muxer"
documentation = "https://docs.rs/muxer"

[package.metadata.docs.rs]
features = ["serde", "contextual"]

[workspace]

[dependencies]
logp = "0.2"
pare = { version = "0.2", features = ["serde"] }
rand = { version = "0.9", optional = true }
rand_distr = { version = "0.5", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
drawset = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.7"
proptest = "1.9"
serde_json = "1.0"

[features]
default = ["stochastic"]
serde = ["dep:serde"]
stochastic = ["dep:rand", "dep:rand_distr"]
contextual = ["dep:rand"]
# Boltzmann (softmax-temperature) arm selection via drawset's Gumbel-max trick.
# Adds a deterministic-with-seed alternative to Thompson and EXP3-IX.
boltzmann = ["dep:drawset"]

[[bench]]
name = "coverage"
harness = false

[[bench]]
name = "monitor"
harness = false
